--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
+
+    <link rel="shortcut icon" type="imagex/png" href="src/images/portfolio.ico">
     <link rel="stylesheet" href="build/styles/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
