adição novos projetos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img class="profile-img" src="src/images/luciano.jpg" alt="">
             <div class="profile-bio">
                 <h1 class="profile-title">Luciano Brito</h1>
-                <h2 class="profile-subtitle">Programador Fullstack</h2>
+                <h2 class="profile-subtitle">Programador Fullstack Java</h2>
             </div>
         </header>
 
@@ -57,18 +57,23 @@
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="https://lp-restaurante-bootstrap.vercel.app/">
-                        Visite o projeto "LP Bootstrap"
+                    <a href="https://www.codetechss.com.br/">
+                        Visite o projeto "Code Tech"
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="https://galeria-de-fotos-mocha.vercel.app/">
-                        Visite o projeto "Galeria de Fotos"
+                    <a href="https://github-info-delta.vercel.app/">
+                        Visite o projeto "Github Info"
                     </a>
                 </li>
                 <li class="projects-list-item">
-                    <a href="https://luciano-projeto-calculadora-media.vercel.app/">
-                        Visite o projeto "Calculadora de médias"
+                    <a href="https://meu-aniversario-weld.vercel.app/">
+                        Visite o projeto "Meu Aniversário"
+                    </a>
+                </li>
+                <li class="projects-list-item">
+                    <a href="https://todo-vue-eight-mu.vercel.app/">
+                        Visite o projeto "Todo List VueJS"
                     </a>
                 </li>
             </ul>
